--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -284,16 +284,41 @@
 						<local:DataGridDragSelectionBehavior/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DataGridDoubleClickBehavior/>
+						<local:DeselectDataGridOnClickOutsideBehavior/>
 					</interactivity:Interaction.Behaviors>
+					
 					<DataGrid.Columns>
 
 						<DataGridTextColumn Binding="{Binding NumberInOrder.Value}"
-											Header="1"
+											Width="40"
 											IsReadOnly="True"
 											x:CompileBindings="True"
-											x:DataType="forms1:Form11"/>
+											
+											x:DataType="forms1:Form11">
+							<DataGridTextColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="1"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTextColumn.HeaderTemplate>
+						</DataGridTextColumn>
 
-						<DataGridTemplateColumn Header="2">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="2"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
@@ -301,15 +326,40 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="3">
+						<DataGridTemplateColumn > 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="3"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<CalendarDatePicker SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+									<Grid ColumnDefinitions="*,Auto">
+										<TextBox Grid.Column="0" Text="{Binding OperationDate.Value, Mode=TwoWay}"/>
+										<CalendarDatePicker Grid.Column="1"
+															SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+									</Grid>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="4" Width="80">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="4"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"/>
@@ -317,7 +367,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="5"  Width="100">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="5"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding Type.Value, Mode=TwoWay}"/>
@@ -325,7 +386,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="6">
+						<DataGridTemplateColumn > 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="6"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding Radionuclids.Value, Mode=TwoWay}"/>
@@ -333,7 +405,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="7"  Width="100">
+						<DataGridTemplateColumn > 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="7"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"/>
@@ -341,7 +424,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="8"  Width="100">
+						<DataGridTemplateColumn > 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="8"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding Quantity.Value, Mode=TwoWay}"/>
@@ -349,7 +443,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="9">
+						<DataGridTemplateColumn > 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="9"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding Activity.Value, Mode=TwoWay}"/>
@@ -357,8 +462,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn
-											Header="10">
+						<DataGridTemplateColumn > 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="10"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"/>
@@ -366,15 +481,41 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="11"  Width="100">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="11"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<CalendarDatePicker SelectedDate="{Binding CreationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+									<Grid ColumnDefinitions="*,Auto">
+										<TextBox Grid.Column="0" Text="{Binding CreationDate.Value, Mode=TwoWay}"/>
+										<CalendarDatePicker Grid.Column="1"
+															SelectedDate="{Binding CreationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+									</Grid>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="12"  Width="110">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="12"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding Category.Value, Mode=TwoWay}"/>
@@ -382,7 +523,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="13">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="13"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"/>
@@ -390,7 +542,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="14">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="14"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"/>
@@ -398,7 +561,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="15">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="15"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding Owner.Value, Mode=TwoWay}"/>
@@ -406,7 +580,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="16">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="16"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"/>
@@ -414,7 +599,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="17">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="17"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
@@ -422,15 +618,41 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="18">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="18"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<CalendarDatePicker SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+									<Grid ColumnDefinitions="*,Auto">
+										<TextBox Grid.Column="0" Text="{Binding DocumentDate.Value, Mode=TwoWay}"/>
+										<CalendarDatePicker Grid.Column="1"
+															SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+									</Grid>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="19">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="19"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"/>
@@ -438,7 +660,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="20">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="20"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"/>
@@ -446,7 +679,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="21">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="21"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding PackName.Value, Mode=TwoWay}"/>
@@ -454,7 +698,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="22">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="22"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding PackType.Value, Mode=TwoWay}"/>
@@ -462,7 +717,18 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="23">
+						<DataGridTemplateColumn> 
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="23"/>
+											<Button Grid.Column="1"/>
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
 									<TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"/>
