--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -46,6 +46,24 @@
 			</Expander.Header>
 			<WrapPanel Classes="header">
 				<Border Classes="borderContainer">
+					<Grid RowDefinitions="Auto,*,Auto">
+						<Button Command="{Binding SwitchToNextReport}"
+								Grid.Row="0" 
+								VerticalContentAlignment="Center" 
+								Height="75" 
+								FontSize="48" 
+								Content="🠕"/>
+						
+						<Button Grid.Row="1">Поиск</Button>
+						<Button Command="{Binding SwitchToPreviousReport}"
+								Grid.Row="2" 
+								VerticalContentAlignment="Center" 
+								Height="75" 
+								FontSize="48" 
+								Content="🠗"/>
+					</Grid>
+				</Border>
+				<Border Classes="borderContainer">
 					<Grid Margin="5" RowDefinitions="*,*,*,*,*">
 
 						<Grid ColumnDefinitions="*,*"  Grid.Row="0">
@@ -73,11 +91,6 @@
 						<StackPanel Orientation="Horizontal" Grid.Row="3">
 							<Button Margin="5" Command="{Binding CheckForm}">Проверить</Button>
 							<Button Margin="5" Command="{Binding SaveReport}">Сохранить</Button>
-						</StackPanel>
-
-						<StackPanel Orientation="Horizontal"  Grid.Row="4">
-							<TextBlock Margin="5" >Автозаполнение:</TextBlock>
-							<CheckBox Margin="5" IsChecked="{Binding IsAutoReplaceEnabled}"></CheckBox>
 						</StackPanel>
 					</Grid>
 				</Border>
@@ -124,7 +137,17 @@
 								Content="Скопировать данные предыдущей формы"/>
 					</Grid>
 				</Border>
-				<Button Command="{Binding SourceTransmissionAll}"> Перевести все РВ в РАО</Button>
+				<Border Classes="borderContainer">
+					<Grid Margin="5" RowDefinitions="Auto,Auto">
+						
+						<Button Grid.Row="0" Command="{Binding SourceTransmissionAll}"> Перевести все РВ в РАО</Button>
+					
+						<StackPanel Grid.Row="1" Orientation="Horizontal">
+							<TextBlock Margin="5" >Автозаполнение:</TextBlock>
+							<CheckBox Margin="5" IsChecked="{Binding IsAutoReplaceEnabled}"></CheckBox>
+						</StackPanel>
+					</Grid>
+				</Border>
 
 			</WrapPanel>
 		</Expander>
@@ -302,6 +325,7 @@
 											<TextBlock Grid.Column="0" Text="1"/>
 											<Button Grid.Column="1"/>
 										</Grid>
+
 									</Border>
 								</DataTemplate>
 							</DataGridTextColumn.HeaderTemplate>
@@ -740,98 +764,99 @@
 				</DataGrid>
 			</Grid>
 		</ScrollViewer>
+		<Border Grid.Row="2" Classes="pageControlContainer">
+			<Grid 
+				  RowDefinitions="Auto,Auto"
+				  ColumnDefinitions="Auto,Auto,Auto,Auto">
+				<TextBlock Text="Текущая страница"
+					Grid.Row="0" Grid.Column="0" Margin="5"/>
+				<NumericUpDown Value="{Binding CurrentPage}" Minimum="1"
+					Grid.Row="0" Grid.Column="1" Margin="5">
+					<interactivity:Interaction.Behaviors>
+						<local:NumericUpDownDigitValidationBehavior/>
+					</interactivity:Interaction.Behaviors>
+				</NumericUpDown>
+				<TextBlock Text ="Кол-во страниц:"
+					Grid.Row="0" Grid.Column="2" Margin="5"/>
+				<TextBlock Text="{Binding TotalPages}"
+					Grid.Row="0" Grid.Column="3" Margin="5"/>
+				<TextBlock Text="Кол-во строчек на странице"
+					Grid.Row="1" Grid.Column="0" Margin="5"/>
+				<NumericUpDown Value="{Binding RowCount}" Minimum="1"
+					Grid.Row="1" Grid.Column="1" Margin="5">
+					<interactivity:Interaction.Behaviors>
+						<local:NumericUpDownDigitValidationBehavior/>
+					</interactivity:Interaction.Behaviors>
+				</NumericUpDown>
 
-		<Grid Grid.Row="2"
-			  Classes="pageControlContainer"
-			  RowDefinitions="Auto,Auto"
-			  ColumnDefinitions="Auto,Auto,Auto,Auto">
-			<TextBlock Text="Текущая страница"
-				Grid.Row="0" Grid.Column="0" Margin="5"/>
-			<NumericUpDown Value="{Binding CurrentPage}" Minimum="1"
-				Grid.Row="0" Grid.Column="1" Margin="5">
-				<interactivity:Interaction.Behaviors>
-					<local:NumericUpDownDigitValidationBehavior/>
-				</interactivity:Interaction.Behaviors>
-			</NumericUpDown>
-			<TextBlock Text ="Кол-во страниц:"
-				Grid.Row="0" Grid.Column="2" Margin="5"/>
-			<TextBlock Text="{Binding TotalPages}"
-				Grid.Row="0" Grid.Column="3" Margin="5"/>
-			<TextBlock Text="Кол-во строчек на странице"
-				Grid.Row="1" Grid.Column="0" Margin="5"/>
-			<NumericUpDown Value="{Binding RowCount}" Minimum="1"
-				Grid.Row="1" Grid.Column="1" Margin="5">
-				<interactivity:Interaction.Behaviors>
-					<local:NumericUpDownDigitValidationBehavior/>
-				</interactivity:Interaction.Behaviors>
-			</NumericUpDown>
-
-			<TextBlock Text="Всего строчек:"
-				Grid.Row="1" Grid.Column="2" Margin="5"/>
-			<TextBlock Text="{Binding TotalRows}"
-				Grid.Row="1" Grid.Column="3" Margin="5"/>
-		</Grid>
-
+				<TextBlock Text="Всего строчек:"
+					Grid.Row="1" Grid.Column="2" Margin="5"/>
+				<TextBlock Text="{Binding TotalRows}"
+					Grid.Row="1" Grid.Column="3" Margin="5"/>
+			</Grid>
+		</Border>
 		<Expander Grid.Row ="3"
 				  IsExpanded="True"
 				  ExpandDirection="Up">
 			<Expander.Header>
 				Скрыть/Раскрыть нижнюю панель
 			</Expander.Header>
-			<StackPanel Classes="notesContainer">
-				<StackPanel.ContextMenu>
-					<ContextMenu>
-						<MenuItem Header="Добавить строку"
-								  Command="{Binding AddNote}"/>
-						<MenuItem Header="Добавить N строк"
-								  Command="{Binding AddNotes}"/>
-						<MenuItem Header="Копировать"
-								  Command="{Binding CopyNotes}"
-								  CommandParameter="{Binding SelectedNotes}"/>
-						<MenuItem Header="Вставить"
-								  Command="{Binding PasteNotes}"/>
-						<MenuItem Header="Удалить выбранные строчки"
-								  Command="{Binding DeleteNotes}"
-								  CommandParameter="{Binding SelectedNotes}"/>
-					</ContextMenu>
-				</StackPanel.ContextMenu>
-				<TextBlock Margin="5">Примечания</TextBlock>
-				<DataGrid Classes="notesTable"
-						  Items="{Binding NoteList}"
-						  SelectedItem="{Binding SelectedNote}">
-					<interactivity:Interaction.Behaviors>
-						<local:DataGridDoubleClickBehavior/>
-						<local:DataGridDragSelectionBehavior/>
-						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedNotes, Mode=TwoWay}" />
-					</interactivity:Interaction.Behaviors>
-					<DataGrid.Columns>
-						<DataGridTemplateColumn Header="№ строки" Width="80">
-							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
-									<TextBox Text="{Binding RowNumber.Value, Mode=TwoWay}"/>
-								</DataTemplate>
-							</DataGridTemplateColumn.CellTemplate>
-						</DataGridTemplateColumn>
+			<Border Classes="notesContainer">
+				<StackPanel>
+					<StackPanel.ContextMenu>
+						<ContextMenu>
+							<MenuItem Header="Добавить строку"
+									  Command="{Binding AddNote}"/>
+							<MenuItem Header="Добавить N строк"
+									  Command="{Binding AddNotes}"/>
+							<MenuItem Header="Копировать"
+									  Command="{Binding CopyNotes}"
+									  CommandParameter="{Binding SelectedNotes}"/>
+							<MenuItem Header="Вставить"
+									  Command="{Binding PasteNotes}"/>
+							<MenuItem Header="Удалить выбранные строчки"
+									  Command="{Binding DeleteNotes}"
+									  CommandParameter="{Binding SelectedNotes}"/>
+						</ContextMenu>
+					</StackPanel.ContextMenu>
+					<TextBlock Margin="5">Примечания</TextBlock>
+					<DataGrid Classes="notesTable"
+							  Items="{Binding NoteList}"
+							  SelectedItem="{Binding SelectedNote}">
+						<interactivity:Interaction.Behaviors>
+							<local:DataGridDoubleClickBehavior/>
+							<local:DataGridDragSelectionBehavior/>
+							<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedNotes, Mode=TwoWay}" />
+						</interactivity:Interaction.Behaviors>
+						<DataGrid.Columns>
+							<DataGridTemplateColumn Header="№ строки" Width="80">
+								<DataGridTemplateColumn.CellTemplate>
+									<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+										<TextBox Text="{Binding RowNumber.Value, Mode=TwoWay}"/>
+									</DataTemplate>
+								</DataGridTemplateColumn.CellTemplate>
+							</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="№ графы" Width="80">
-							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
-									<TextBox Text="{Binding GraphNumber.Value, Mode=TwoWay}"/>
-								</DataTemplate>
-							</DataGridTemplateColumn.CellTemplate>
-						</DataGridTemplateColumn>
+							<DataGridTemplateColumn Header="№ графы" Width="80">
+								<DataGridTemplateColumn.CellTemplate>
+									<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+										<TextBox Text="{Binding GraphNumber.Value, Mode=TwoWay}"/>
+									</DataTemplate>
+								</DataGridTemplateColumn.CellTemplate>
+							</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="Пояснения" Width="*">
-							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
-									<TextBox Text="{Binding Comment.Value, Mode=TwoWay}"/>
-								</DataTemplate>
-							</DataGridTemplateColumn.CellTemplate>
-						</DataGridTemplateColumn>
+							<DataGridTemplateColumn Header="Пояснения" Width="*">
+								<DataGridTemplateColumn.CellTemplate>
+									<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+										<TextBox Text="{Binding Comment.Value, Mode=TwoWay}"/>
+									</DataTemplate>
+								</DataGridTemplateColumn.CellTemplate>
+							</DataGridTemplateColumn>
 
-					</DataGrid.Columns>
-				</DataGrid>
-			</StackPanel>
+						</DataGrid.Columns>
+					</DataGrid>
+				</StackPanel>
+			</Border>
 		</Expander>
 
 	</Grid>
