--- a/Client_App/Views/Forms/Forms1/Form_19.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_19.axaml
@@ -44,7 +44,24 @@
 				<Expander.Header>
 					Скрыть/Раскрыть верхнюю панель
 				</Expander.Header>
-			    <WrapPanel Classes="header">
+			    <WrapPanel Classes="header"><Border Classes="borderContainer">
+					<Grid RowDefinitions="Auto,*,Auto">
+						<Button Command="{Binding SwitchToNextReport}"
+								Grid.Row="0" 
+								VerticalContentAlignment="Center" 
+								Height="75" 
+								FontSize="48" 
+								Content="🠕"/>
+						
+						<Button Grid.Row="1">Поиск</Button>
+						<Button Command="{Binding SwitchToPreviousReport}"
+								Grid.Row="2" 
+								VerticalContentAlignment="Center" 
+								Height="75" 
+								FontSize="48" 
+								Content="🠗"/>
+					</Grid>
+				</Border>
 				    <Border Classes="borderContainer">
                         <Grid Margin="5" RowDefinitions="*,*,*,*,*">
 
@@ -414,97 +431,98 @@
 				</Grid>
 			</ScrollViewer>
 
-            <Grid Grid.Row="2"
-                  Classes="pageControlContainer"
-                  RowDefinitions="Auto,Auto"
-                  ColumnDefinitions="Auto,Auto,Auto,Auto">
-				<TextBlock Text="Текущая страница"
-					Grid.Row="0" Grid.Column="0" Margin="5"/>
-				<NumericUpDown Value="{Binding CurrentPage}" Minimum="1"
-					Grid.Row="0" Grid.Column="1" Margin="5">
-                    <interactivity:Interaction.Behaviors>
-                        <local:NumericUpDownDigitValidationBehavior/>
-                    </interactivity:Interaction.Behaviors>
-                </NumericUpDown>
-				<TextBlock Text ="Кол-во страниц:"
-					Grid.Row="0" Grid.Column="2" Margin="5"/>
-				<TextBlock Text="{Binding TotalPages}"
-					Grid.Row="0" Grid.Column="3" Margin="5"/>
-				<TextBlock Text="Кол-во строчек на странице"
-					Grid.Row="1" Grid.Column="0" Margin="5"/>
-				<NumericUpDown Value="{Binding RowCount}" Minimum="1"
-					Grid.Row="1" Grid.Column="1" Margin="5">
-                    <interactivity:Interaction.Behaviors>
-                        <local:NumericUpDownDigitValidationBehavior/>
-                    </interactivity:Interaction.Behaviors>
-                </NumericUpDown>
+			<Border Grid.Row="2" Classes="pageControlContainer">
+				<Grid RowDefinitions="Auto,Auto"
+					  ColumnDefinitions="Auto,Auto,Auto,Auto">
+					<TextBlock Text="Текущая страница"
+						Grid.Row="0" Grid.Column="0" Margin="5"/>
+					<NumericUpDown Value="{Binding CurrentPage}" Minimum="1"
+						Grid.Row="0" Grid.Column="1" Margin="5">
+						<interactivity:Interaction.Behaviors>
+							<local:NumericUpDownDigitValidationBehavior/>
+						</interactivity:Interaction.Behaviors>
+					</NumericUpDown>
+					<TextBlock Text ="Кол-во страниц:"
+						Grid.Row="0" Grid.Column="2" Margin="5"/>
+					<TextBlock Text="{Binding TotalPages}"
+						Grid.Row="0" Grid.Column="3" Margin="5"/>
+					<TextBlock Text="Кол-во строчек на странице"
+						Grid.Row="1" Grid.Column="0" Margin="5"/>
+					<NumericUpDown Value="{Binding RowCount}" Minimum="1"
+						Grid.Row="1" Grid.Column="1" Margin="5">
+						<interactivity:Interaction.Behaviors>
+							<local:NumericUpDownDigitValidationBehavior/>
+						</interactivity:Interaction.Behaviors>
+					</NumericUpDown>
 				
-				<TextBlock Text="Всего строчек:"
-					Grid.Row="1" Grid.Column="2" Margin="5"/>
-				<TextBlock Text="{Binding TotalRows}"
-					Grid.Row="1" Grid.Column="3" Margin="5"/>
-			</Grid>
-
+					<TextBlock Text="Всего строчек:"
+						Grid.Row="1" Grid.Column="2" Margin="5"/>
+					<TextBlock Text="{Binding TotalRows}"
+						Grid.Row="1" Grid.Column="3" Margin="5"/>
+				</Grid>
+			</Border>
 			<Expander Grid.Row ="3"
 					  IsExpanded="True"
 					  ExpandDirection="Up">
 				<Expander.Header>
 					Скрыть/Раскрыть нижнюю панель
 				</Expander.Header>
-                <StackPanel Classes="notesContainer">
-				    <StackPanel.ContextMenu>
-					    <ContextMenu>
-						    <MenuItem Header="Добавить строку"
-								      Command="{Binding AddNote}"/>
-						    <MenuItem Header="Добавить N строк"
-								      Command="{Binding AddNotes}"/>
-						    <MenuItem Header="Копировать"
-								      Command="{Binding CopyNotes}"
-								      CommandParameter="{Binding SelectedNotes}"/>
-						    <MenuItem Header="Вставить"
-								      Command="{Binding PasteNotes}"/>
-						    <MenuItem Header="Удалить выбранные строчки"
-								      Command="{Binding DeleteNotes}"
-								      CommandParameter="{Binding SelectedNotes}"/>
-					    </ContextMenu>
-				    </StackPanel.ContextMenu>
-				    <TextBlock Margin="5">Примечания</TextBlock>
-                    <DataGrid Classes="notesTable"
-                              Items="{Binding NoteList}"
-                              SelectedItem="{Binding SelectedNote}">
-					    <interactivity:Interaction.Behaviors>
-							<local:DataGridDoubleClickBehavior/>
-						    <local:DataGridDragSelectionBehavior/>
-						    <local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedNotes, Mode=TwoWay}" />
-					    </interactivity:Interaction.Behaviors>
-                        <DataGrid.Columns>
-						    <DataGridTemplateColumn Header="№ строки" Width="80">
-                                <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
-                                        <TextBox Text="{Binding RowNumber.Value, Mode=TwoWay}"/>
-                                    </DataTemplate>
-                                </DataGridTemplateColumn.CellTemplate>
-                            </DataGridTemplateColumn>
+				<Border Classes="notesContainer">
+					<StackPanel>
+						<StackPanel.ContextMenu>
+							<ContextMenu>
+								<MenuItem Header="Добавить строку"
+										  Command="{Binding AddNote}"/>
+								<MenuItem Header="Добавить N строк"
+										  Command="{Binding AddNotes}"/>
+								<MenuItem Header="Копировать"
+										  Command="{Binding CopyNotes}"
+										  CommandParameter="{Binding SelectedNotes}"/>
+								<MenuItem Header="Вставить"
+										  Command="{Binding PasteNotes}"/>
+								<MenuItem Header="Удалить выбранные строчки"
+										  Command="{Binding DeleteNotes}"
+										  CommandParameter="{Binding SelectedNotes}"/>
+							</ContextMenu>
+						</StackPanel.ContextMenu>
+						<TextBlock Margin="5">Примечания</TextBlock>
+						<DataGrid Classes="notesTable"
+								  Items="{Binding NoteList}"
+								  SelectedItem="{Binding SelectedNote}">
+							<interactivity:Interaction.Behaviors>
+								<local:DataGridDoubleClickBehavior/>
+								<local:DataGridDragSelectionBehavior/>
+								<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedNotes, Mode=TwoWay}" />
+							</interactivity:Interaction.Behaviors>
+							<DataGrid.Columns>
+								<DataGridTemplateColumn Header="№ строки" Width="80">
+									<DataGridTemplateColumn.CellTemplate>
+										<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+											<TextBox Text="{Binding RowNumber.Value, Mode=TwoWay}"/>
+										</DataTemplate>
+									</DataGridTemplateColumn.CellTemplate>
+								</DataGridTemplateColumn>
 							
-                            <DataGridTemplateColumn Header="№ графы" Width="80">
-                                <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
-                                        <TextBox Text="{Binding GraphNumber.Value, Mode=TwoWay}"/>
-                                    </DataTemplate>
-                                </DataGridTemplateColumn.CellTemplate>
-                            </DataGridTemplateColumn>
+								<DataGridTemplateColumn Header="№ графы" Width="80">
+									<DataGridTemplateColumn.CellTemplate>
+										<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+											<TextBox Text="{Binding GraphNumber.Value, Mode=TwoWay}"/>
+										</DataTemplate>
+									</DataGridTemplateColumn.CellTemplate>
+								</DataGridTemplateColumn>
 							
-                            <DataGridTemplateColumn Header="Пояснения" Width="*">
-                                <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
-                                        <TextBox Text="{Binding Comment.Value, Mode=TwoWay}"/>
-                                    </DataTemplate>
-                                </DataGridTemplateColumn.CellTemplate>
-                            </DataGridTemplateColumn>
+								<DataGridTemplateColumn Header="Пояснения" Width="*">
+									<DataGridTemplateColumn.CellTemplate>
+										<DataTemplate x:CompileBindings="True" x:DataType="forms:Note">
+											<TextBox Text="{Binding Comment.Value, Mode=TwoWay}"/>
+										</DataTemplate>
+									</DataGridTemplateColumn.CellTemplate>
+								</DataGridTemplateColumn>
 
-					    </DataGrid.Columns>
-				    </DataGrid>
-			    </StackPanel>
+							</DataGrid.Columns>
+						</DataGrid>
+					</StackPanel>
+				</Border>
 			</Expander>
 
 		</Grid>
